- Poor code coverage of controllers and domain classes.
- View photo comment RSS / XML / JSON links are broken.

Potential improvements:
- Tag library to display UI components.
- Tag library split.
- Package rename for controllers, services and domains.
- Option for Grid Listing.
- Wiki details on how to make best use of UI.
- Wiki API reference.
- Potential switch to jQuery for UI.
- Google Map widget introduction.
- Update to Maven and new GData API client jars.

Release notes 0.6.3 (TBA)
- Introduction of Google Map to display photo location.
- Introduction of jQuery as prefered JS library.
- CSS file updates.

Release notes 0.6.2 (31st July, 2010)
- Improved error logging and parameter handling.
- Comment Controller unit testing.
- Comment listing fix.
- Plug-in package rename.
- Update to Mockito 1.8.5.
- Attempt to make more use of the Grails test framework with mockFor().
- Removal of PicasaService and PicasaCommentService interfaces.

Release notes 0.6.1 (18th July, 2010)
- Update to OAuth plug-in 0.6.
- Introduction of the SessionLifecycleListener to monitor sessions.
- Introduction of the SessionLifecycle interface.
- Introduction of the SessionMonitor, default implementation of the SessionLifecycle.
- Update session monitor to maintain list of sessions.
- Add onConfigChange update for PicasaCommentService for each registered session. 

Release notes 0.6.0 (17th July, 2010)
- Grails update to 1.3.3.
- Comment listing by default shows last page.
- Separate comment posting to separate service to allow main service to be stateless.
- Better error reporting from the Photo and Comment controllers.
- Introduction of the PicasaCommentService and PicasaCommentServiceException.
- Introduction of the ServiceCache and PicasaServiceCache.
- Introduction of the PicasaQuery enum.
- Extended packaging of the src/groovy dir.
- Exported convert methods to utility class.
- Config change now updates PicasaService properties at runtime.